# OOP-MiniCAD

./: CMakeLists.txt  README.md  checker.sh
source/: Main.cpp
source/App/: App.cpp  App.h  App.hpp
source/ShapeFactory/: ShapeFactory.cpp  ShapeFactory.h  ShapeFactory.hpp
source/ShapeVisitors/: DrawVisitor.cpp  DrawVisitor.h  DrawVisitor.hpp  PrintVisitor.cpp  PrintVisitor.h  PrintVisitor.hpp  ShapeVisitor.h  ShapeVisitor.hpp
source/Shapes/: Canvas.cpp  Canvas.h  Canvas.hpp  Circle.cpp  Circle.h  Circle.hpp  Diamond.cpp  Diamond.h  Diamond.hpp  Line.cpp  Line.h  Line.hpp  Polygon.cpp  Polygon.h  Polygon.hpp  Rectangle.cpp  Rectangle.h  Rectangle.hpp  Shape.h  Shape.hpp  Square.cpp  Square.h  Square.hpp  Triangle.cpp  Triangle.h  Triangle.hpp
source/Utils/: Color.cpp  Color.h  Color.hpp  Constants.hpp  Point.cpp  Point.h  Point.hpp
